--- a/index.html
+++ b/index.html
@@ -30,30 +30,49 @@
                 <button type="button">Sign in</button>
             </nav>
             <div class="icons">
-            <ul>
-                <li class="l1"><i class="fa-solid fa-bed"></i> Stays</li>
-                <li><i class="fa-solid fa-plane-departure"></i> Flight</li>
-                <li><i class="fa-solid fa-car"></i> Car Rental</li>
-                <li><i class="fa-solid fa-gear"></i> Attractions</li>
-                <li><i class="fa-solid fa-taxi"></i> Airport Taxis</li>
-            </ul>
-        </div>
-        <div class="text">
-            <h1>Find your next stay</h1>
-            <h2>Search deals on hotels, homes, and much more...</h2>
-        </div>
-        <div class="inputs">
-            <input type="text" placeholder="Where are you going ?">
-            <input type="date">
-            <select id="location">
-                <option value="">2 adults · 0 children · 1 room</option>
-                <option value="">Adults</option>
-                <option value="">Children</option>
-                <option value="">Rooms</option>
-            </select>
-            <button type="submit">Search</button>
-        </div>  
+                <ul>
+                    <li class="l1"><i class="fa-solid fa-bed"></i> Stays</li>
+                    <li><i class="fa-solid fa-plane-departure"></i> Flight</li>
+                    <li><i class="fa-solid fa-car"></i> Car Rental</li>
+                    <li><i class="fa-solid fa-gear"></i> Attractions</li>
+                    <li><i class="fa-solid fa-taxi"></i> Airport Taxis</li>
+                </ul>
+            </div>
+            <div class="text">
+                <h1>Find your next stay</h1>
+                <h2>Search deals on hotels, homes, and much more...</h2>
+            </div>
+            <div class="inputs">
+                <input type="text" placeholder="Where are you going ?">
+                <input type="date">
+                <select id="location">
+                    <option value="">2 adults · 0 children · 1 room</option>
+                    <option value="">Adults</option>
+                    <option value="">Children</option>
+                    <option value="">Rooms</option>
+                </select>
+                <button type="submit">Search</button>
+            </div>
         </header>
+
+        <!-- content -->
+        <div class="content">
+            <h3>Offers</h3>
+            <p>Promotions, deals, and special offers for you</p>
+            <div class="d1">
+            <div class="div1">
+                <h3>Take your longest vacation yet</h3>
+                <p>Browse properties offering long-term stays, <br> many at reduced monthly rates.</p>
+                <button type="submit">Find a stay</button>
+                <img src="images/stay.jpeg" alt="">
+            </div>
+            <div class="div2">
+                <h3>New year, new adventures</h3>
+                <p>Save 15% or more when you book and stay before April 1, 2024</p>
+                <button>Find Early 2024 Deals</button>
+            </div>
+        </div>
+        </div>
 
     </div>
 
