--- a/index.html
+++ b/index.html
@@ -61,18 +61,46 @@
             <p>Promotions, deals, and special offers for you</p>
             <div class="d1">
             <div class="div1">
+                <div class="d2">
                 <h3>Take your longest vacation yet</h3>
                 <p>Browse properties offering long-term stays, <br> many at reduced monthly rates.</p>
                 <button type="submit">Find a stay</button>
                 <img src="images/stay.jpeg" alt="">
             </div>
+            </div>
             <div class="div2">
                 <h3>New year, new adventures</h3>
-                <p>Save 15% or more when you book and stay before April 1, 2024</p>
+                <p>Save 15% or more when you book and stay <br> before April 1, 2024</p>
                 <button>Find Early 2024 Deals</button>
             </div>
         </div>
         </div>
+
+        <!-- pictures -->
+
+        <div class="d3">
+            <h2>Browse by property type</h2>
+            <div class="pics">
+            <figure>
+                <img src="images/pic1.jpeg" alt="">
+                <figcaption>Hotels</figcaption>
+            </figure>
+            <figure>
+                <img src="images/pic2.jpeg" alt="">
+                <figcaption>Apartments</figcaption>
+            </figure>
+            <figure>
+                <img src="images/pic3.jpeg" alt="">
+                <figcaption>Resorts</figcaption>
+            </figure>
+            <figure>
+                <img src="images/pic4.jpeg" alt="">
+                <figcaption>Villas</figcaption>
+            </figure>
+            <!-- <i class="fa-solid fa-arrow-right"></i> -->
+            <img src="images/right.png" class="img1">
+        </div>
+    </div>
 
     </div>
 
