--- a/index.html
+++ b/index.html
@@ -97,9 +97,45 @@
                 <img src="images/pic4.jpeg" alt="">
                 <figcaption>Villas</figcaption>
             </figure>
-            <!-- <i class="fa-solid fa-arrow-right"></i> -->
             <img src="images/right.png" class="img1">
         </div>
+    </div>
+
+    <!-- Destination -->
+
+    <div class="d4">
+        <h2>Trending Destinations</h2>
+        <p>Most popular choices for travelers from Pakistan</p>
+        <div class="pic">
+            <div class="div3">
+                <h3>Lahore</h3>
+                <img src="images/pakistan.png" alt="">
+            </div>
+            <div class="div3" id="div4">
+                <h3>Dubai</h3>
+                <img src="images/dubai.png" alt="">
+            </div>
+        </div>
+        <div class="pic2">
+            <div class="div4">
+                <h3>Islamabad</h3>
+                <img src="images/pakistan.png" alt="">
+            </div>
+            <div class="div4" id="div5">
+                <h3>Mecca</h3>
+                <img src="images/mecca.png" alt="">
+            </div>
+            <div class="div4" id="div6">
+                <h3>Karachi</h3>
+                <img src="images/pakistan.png" alt="">
+            </div>
+        </div>
+    </div>
+
+    <!-- Explore -->
+    <div class="d7">
+        <h2>Explore Pakistan</h2>
+        <p>These popular destinations have a lot to offer</p>
     </div>
 
     </div>
