--- a/index.html
+++ b/index.html
@@ -60,20 +60,20 @@
             <h3>Offers</h3>
             <p>Promotions, deals, and special offers for you</p>
             <div class="d1">
-            <div class="div1">
-                <div class="d2">
-                <h3>Take your longest vacation yet</h3>
-                <p>Browse properties offering long-term stays, <br> many at reduced monthly rates.</p>
-                <button type="submit">Find a stay</button>
-                <img src="images/stay.jpeg" alt="">
+                <div class="div1">
+                    <div class="d2">
+                        <h3>Take your longest vacation yet</h3>
+                        <p>Browse properties offering long-term stays, <br> many at reduced monthly rates.</p>
+                        <button type="submit">Find a stay</button>
+                        <img src="images/stay.jpeg" alt="">
+                    </div>
+                </div>
+                <div class="div2">
+                    <h3>New year, new adventures</h3>
+                    <p>Save 15% or more when you book and stay <br> before April 1, 2024</p>
+                    <button>Find Early 2024 Deals</button>
+                </div>
             </div>
-            </div>
-            <div class="div2">
-                <h3>New year, new adventures</h3>
-                <p>Save 15% or more when you book and stay <br> before April 1, 2024</p>
-                <button>Find Early 2024 Deals</button>
-            </div>
-        </div>
         </div>
 
         <!-- pictures -->
@@ -81,63 +81,96 @@
         <div class="d3">
             <h2>Browse by property type</h2>
             <div class="pics">
-            <figure>
-                <img src="images/pic1.jpeg" alt="">
-                <figcaption>Hotels</figcaption>
-            </figure>
-            <figure>
-                <img src="images/pic2.jpeg" alt="">
-                <figcaption>Apartments</figcaption>
-            </figure>
-            <figure>
-                <img src="images/pic3.jpeg" alt="">
-                <figcaption>Resorts</figcaption>
-            </figure>
-            <figure>
-                <img src="images/pic4.jpeg" alt="">
-                <figcaption>Villas</figcaption>
-            </figure>
-            <img src="images/right.png" class="img1">
-        </div>
-    </div>
-
-    <!-- Destination -->
-
-    <div class="d4">
-        <h2>Trending Destinations</h2>
-        <p>Most popular choices for travelers from Pakistan</p>
-        <div class="pic">
-            <div class="div3">
-                <h3>Lahore</h3>
-                <img src="images/pakistan.png" alt="">
-            </div>
-            <div class="div3" id="div4">
-                <h3>Dubai</h3>
-                <img src="images/dubai.png" alt="">
+                <figure>
+                    <img src="images/pic1.jpeg" alt="">
+                    <figcaption>Hotels</figcaption>
+                </figure>
+                <figure>
+                    <img src="images/pic2.jpeg" alt="">
+                    <figcaption>Apartments</figcaption>
+                </figure>
+                <figure>
+                    <img src="images/pic3.jpeg" alt="">
+                    <figcaption>Resorts</figcaption>
+                </figure>
+                <figure>
+                    <img src="images/pic4.jpeg" alt="">
+                    <figcaption>Villas</figcaption>
+                </figure>
+                <img src="images/right.png" class="img1">
             </div>
         </div>
-        <div class="pic2">
-            <div class="div4">
-                <h3>Islamabad</h3>
-                <img src="images/pakistan.png" alt="">
+
+        <!-- Destination -->
+
+        <div class="d4">
+            <h2>Trending Destinations</h2>
+            <p>Most popular choices for travelers from Pakistan</p>
+            <div class="pic">
+                <div class="div3">
+                    <h3>Lahore</h3>
+                    <img src="images/pakistan.png" alt="">
+                </div>
+                <div class="div3" id="div4">
+                    <h3>Dubai</h3>
+                    <img src="images/dubai.png" alt="">
+                </div>
             </div>
-            <div class="div4" id="div5">
-                <h3>Mecca</h3>
-                <img src="images/mecca.png" alt="">
-            </div>
-            <div class="div4" id="div6">
-                <h3>Karachi</h3>
-                <img src="images/pakistan.png" alt="">
+            <div class="pic2">
+                <div class="div4">
+                    <h3>Islamabad</h3>
+                    <img src="images/pakistan.png" alt="">
+                </div>
+                <div class="div4" id="div5">
+                    <h3>Mecca</h3>
+                    <img src="images/mecca.png" alt="">
+                </div>
+                <div class="div4" id="div6">
+                    <h3>Karachi</h3>
+                    <img src="images/pakistan.png" alt="">
+                </div>
             </div>
         </div>
-    </div>
 
-    <!-- Explore -->
-    <div class="d7">
-        <h2>Explore Pakistan</h2>
-        <p>These popular destinations have a lot to offer</p>
-    </div>
+        <!-- Explore -->
+        <div class="d7">
+            <h2>Explore Pakistan</h2>
+            <p>These popular destinations have a lot to offer</p>
 
+            <div class="pic3">
+                <figure>
+                    <img src="images/pic1.jpg" alt="">
+                    <figcaption>Lahore</figcaption>
+                    <p>308 properties</p>
+                </figure>
+                <figure>
+                    <img src="images/pic2.jpg" alt="">
+                    <figcaption>Islamabad</figcaption>
+                    <p>296 properties</p>
+                </figure>
+                <figure>
+                    <img src="images/pic3.jpg" alt="">
+                    <figcaption>Karachi</figcaption>
+                    <p>161 properties</p>
+                </figure>
+                <figure>
+                    <img src="images/pic4.jpg" alt="">
+                    <figcaption>Murree</figcaption>
+                    <p>57 properties</p>
+                </figure>
+                <figure>
+                    <img src="images/pic5.jpg" alt="">
+                    <figcaption>Nathia Gali</figcaption>
+                    <p>3 properties</p>
+                </figure>
+                <figure>
+                    <img src="images/pic6.jpg" alt="">
+                    <figcaption>Rawalpindi</figcaption>
+                    <p>141 properties</p>
+                </figure>
+                <img src="images/right.png" class="img2">
+            </div>
+        </div>
     </div>
 
 </body>
