--- a/index.html
+++ b/index.html
@@ -171,6 +171,112 @@
                 <img src="images/right.png" class="img2">
             </div>
         </div>
+
+        <!-- Destinations  -->
+
+        <div class="d8">
+            <h2>Destinations we love</h2>
+
+            <ul class="ul1">
+                <li class="l2">Regions</li>
+                <li>Cities</li>
+                <li>Place of interest</li>
+            </ul>
+
+            <div class="d9">
+                <div class="list1">
+                    <ul>
+                        <li>Ras Al Khaimah <p> 113 properties</p>
+                        </li>
+                        <li>Bora Bora <p> 59 properties</p>
+                        </li>
+                        <li>Bihar <p> 761 properties</p>
+                        </li>
+                        <li>Lake District <p> 2,409 properties</p>
+                        </li>
+                    </ul>
+                </div>
+                <div class="list1">
+                    <ul>
+                        <li>Ibiza <p> 1,662 properties</p>
+                        </li>
+                        <li>Phuket Province <p> 5,500 properties</p>
+                        </li>
+                        <li>Bali <p> 12,695 properties</p>
+                        </li>
+                        <li>Santorini <p> 1,769 properties</p>
+                        </li>
+                    </ul>
+                </div>
+                <div class="list1">
+                    <ul>
+                        <li>Uttar Pradesh <p> 4,396 properties</p>
+                        </li>
+                        <li>Mykonos <p> 1,456 properties</p>
+                        </li>
+                        <li>Tenerife <p> 9,628 properties</p>
+                        </li>
+                        <li>Hawaii <p> 5,516 properties</p>
+                        </li>
+                    </ul>
+                </div>
+                <div class="list1">
+                    <ul>
+                        <li>Texel <p> 410 properties</p>
+                        </li>
+                        <li>England <p> 74,178 properties</p>
+                        </li>
+                        <li>Jersey <p> 89 properties</p>
+                        </li>
+                        <li>Cornwall <p> 5,288 properties</p>
+                        </li>
+                    </ul>
+                </div>
+                <div class="list1">
+                    <ul>
+                        <li>Isle of Wight <p> 934 properties</p>
+                        </li>
+                        <li>Guernsey <p> 61 properties</p>
+                        </li>
+                        <li>Zanzibar <p> 836 properties</p>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+
+        </div>
+
+        <!-- subscribe -->
+
+        <div class="div8">
+            <div class="div9">
+                <h3>Save time, save money!</h3>
+                <p>Sign up and we'll send the best deals to you</p>
+                <input type="text" placeholder="Enter Your Email" required>
+                <button type="submit">Subscribe</button>
+            </div>
+        </div>
+
+        <!-- footer -->
+
+        <div class="div7">
+            <div class="i1">
+                <button>List your property</button>
+            </div>
+            <div class="i2">
+                <ul>
+                    <li><a href="#" style="position: relative; left: 50px;" >Mobile version</a></li>
+                    <li><a href="#" style="position: relative; left: 50px;" >Your account</a></li>
+                    <li><a href="#" style="position: relative; left: 22px;" >Make changing online</a></li>
+                    <li><a href="#" style="position: relative; left: 20px;" >Customer service help</a></li>
+                    <li><a href="#" style="position: relative; left: 35px;" >Become an affiliate</a></li>
+                    <li><a href="">Booking.com for business</a></li>
+                </ul>
+            </div>
+        </div>
+
+        
+
     </div>
 
 </body>
